Added find exact parts flagged by defender

--- a/amsi-ninja/amsi-ninja.vcxproj.filters
+++ b/amsi-ninja/amsi-ninja.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
 </Project>
