--- a/amsi-ninja/amsi-ninja.vcxproj
+++ b/amsi-ninja/amsi-ninja.vcxproj
@@ -134,6 +134,9 @@
     <ClInclude Include="amsininja.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
